# icp_bd

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  webpack.config.js
src/icp_bd_backend/: Cargo.toml  icp_bd_backend.did
src/icp_bd_backend/src/: lib.rs
src/icp_bd_backend/src/clients/: black_hole.rs  mod.rs  nns_cycles_minting.rs  wicp.rs  xtc.rs
src/icp_bd_backend/src/common/: guards.rs  types.rs
src/icp_bd_frontend/src/: index.html  index.js
