[package]
name = "icp_bd_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.2"
ic-cdk = "0.6.0"
ic-cdk-macros = "0.6.0"
serde = "1.0"
async-trait = "0.1"
bigdecimal = "0.3"
ic-cron = "0.7.1"
ic-ledger-types = "0.3.0"
# rand = "0.8"
# getrandom = { version = "0.2", features = ["js"] }